--- a/computer/MainWindow.xaml
+++ b/computer/MainWindow.xaml
@@ -6,37 +6,74 @@
         xmlns:local="clr-namespace:computer"
         mc:Ignorable="d"
         Title="ComputerShop" Height="600" Width="1000">
-    <Grid Background="AliceBlue">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="299*"/>
-            <ColumnDefinition Width="716*"/>
-        </Grid.ColumnDefinitions>
-        <Menu Height="16" Width="188" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold" Margin="98,86,0,0" Grid.Column="1">
-            <MenuItem Header="Számítógépek" Click="computer_click" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Height="18">
-                <MenuItem.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black"/>
-                        <GradientStop Color="DarkRed" Offset="1"/>
-                    </LinearGradientBrush>
-                </MenuItem.Background>
-            </MenuItem>
-            <MenuItem Header="Oprendszerek" Click="oprendszer_click" HorizontalAlignment="Center" VerticalAlignment="Center" Width="93" Foreground="#FFF7F7F7" Height="18">
-                <MenuItem.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black"/>
-                        <GradientStop Color="DarkRed" Offset="1"/>
-                    </LinearGradientBrush>
-                </MenuItem.Background>
-            </MenuItem>
-        </Menu>
-        <DataGrid Name="data" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="102,163,76,212" BorderBrush="Black" Foreground="BlueViolet" Grid.ColumnSpan="2">
-            <DataGrid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black"/>
-                    <GradientStop Color="#FFE2E2E2" Offset="1"/>
-                </LinearGradientBrush>
-            </DataGrid.Background>
-        </DataGrid>
 
+    <Grid Background="#FFE0E0E0">
+        <!-- Világos szürke háttér -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <!-- Bejelentkezés -->
+            <RowDefinition Height="*"/>
+            <!-- Tartalom -->
+        </Grid.RowDefinitions>
+
+        <!-- Bejelentkezés -->
+        <StackPanel x:Name="loginPanel" Orientation="Horizontal" Margin="10" Grid.Row="0">
+            <Label Content="Bejelentkezés:" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="#4A4A4A"/>
+            <!-- Sötétebb szürke -->
+            <TextBox x:Name="username_txt" Width="120" Margin="0,0,10,0" Background="#FFFFFF" BorderBrush="#4A4A4A"/>
+            <!-- Fehér háttér, szürke keret -->
+            <PasswordBox x:Name="passwordBox" Width="120" Margin="0,0,10,0" Background="#FFFFFF" BorderBrush="#4A4A4A"/>
+            <!-- Fehér háttér, szürke keret -->
+            <Button Content="Bejelentkezés" Width="100" Background="#FF2196F3" Foreground="White" Click="Login_Click"/>
+            <!-- Kék háttér, fehér szöveg -->
+        </StackPanel>
+
+        <!-- Tartalom -->
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="59*"/>
+                <ColumnDefinition Width="141*"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- Menü -->
+            <Menu x:Name="MainMenu" Height="39" Width="348" HorizontalAlignment="Left" VerticalAlignment="Top" Visibility="Collapsed" FontWeight="Bold" Margin="21,10,0,0" Grid.Column="1">
+                <MenuItem Header="Számítógépek" Click="computer" Foreground="White" Height="40" Width="174">
+                    <MenuItem.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#FF00BCD4"/>
+                            <!-- Világoskék -->
+                            <GradientStop Color="#FF6200EE" Offset="1"/>
+                            <!-- Sötétlila -->
+                        </LinearGradientBrush>
+                    </MenuItem.Background>
+                </MenuItem>
+                <MenuItem Header="Operációs rendszerek" Click="operaciosrendszer" Foreground="White" Height="40" Width="174">
+                    <MenuItem.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#FF00BCD4"/>
+                            <!-- Világoskék -->
+                            <GradientStop Color="#FF6200EE" Offset="1"/>
+                            <!-- Sötétlila -->
+                        </LinearGradientBrush>
+                    </MenuItem.Background>
+                </MenuItem>
+            </Menu>
+
+            <!-- DataGrid -->
+            <DataGrid Name="data" Margin="20,60,20,80" BorderBrush="Black" Visibility="Collapsed" Grid.ColumnSpan="2">
+                <DataGrid.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FF00BCD4"/>
+                        <!-- Világoskék -->
+                        <GradientStop Color="#FF6200EE" Offset="1"/>
+                        <!-- Sötétlila -->
+                    </LinearGradientBrush>
+                </DataGrid.Background>
+            </DataGrid>
+
+            <!-- Kilépés gomb -->
+            <Button Content="Kilépés" Width="100" Height="30" Margin="0,0,20,20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Column="1" Background="#FF2196F3" Foreground="White" Click="kilepes_Click"/>
+            <!-- Kék háttér, fehér szöveg -->
+        </Grid>
     </Grid>
 </Window>
